--- a/src/css/style.css
+++ b/src/css/style.css
@@ -79,6 +79,16 @@ input,button{
     -moz-user-select: auto;
     user-select: auto;
 }
+button{ 
+    transition: transform 0.1s, opacity 0.1s;
+}
+button:hover{
+    transform: scale(0.99);
+    opacity: 0.6;
+}
+button:active{
+    transform: scale(0.97);
+}
 input[readonly]{
     background: none;
     -webkit-user-select: all;
@@ -209,7 +219,7 @@ but label input[type="checkbox"]:checked+i{
 .infoDiv{
     max-height: 0;
     overflow: hidden;
-    /* transition: max-height 0.8s; */
+    line-height: 1.6;
 }
 .infoDiv[open=true]{
     max-height: 100%;
@@ -223,14 +233,14 @@ but label input[type="checkbox"]:checked+i{
 }
 #userHead i{
     position: absolute;
-    top: 10px;
+    top: 11px;
     left: 0px;
     width: 50px;
     height: 50px;
     border-radius: 25px;
-    background-image: url(https://static.hdslb.com/images/akari.jpg);
+    background-image: url(/src/img/loading.gif);
     background-position: 0px,0px;
-    background-size: 50px;
+    background-size: 50px 50px;
     background-repeat: no-repeat;
 }
 #userHead p{
@@ -266,6 +276,14 @@ h2 button{
 .full table td.right input{
     display: block;
     width: calc(100% - 15px);
+}
+#avatarURL{
+    display: block;
+    width: 100%;
+    margin: 8px 0 3px 0;
+}
+table{
+    margin-bottom: 6px;
 }
 #cr{
     position: fixed;
