--- a/src/css/style.css
+++ b/src/css/style.css
@@ -327,11 +327,12 @@ table{
     width: 80%;
     max-width: 600px;
     height: 80%;
-    border-radius: 10px;
+    border-radius: 5px;
     background-color: var(--cardjianbiancolor);
     backdrop-filter: var(--cardjianbianword);
     -webkit-backdrop-filter: var(--cardjianbianword);
     line-height: 2;
+    overflow: auto;
     transform: translate(-50%,-50%)scale(0.8);
     opacity: 0;
     visibility: hidden;
