[Upd] 解决了一些已知问题
- 修正更换头像选项卡链接输入框超出页面范围的问题
- 修正“角色”项显示为 undefined 的问题

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -290,7 +290,7 @@ h2 button{
 }
 #avatarURL{
     display: block;
-    width: 100%;
+    width: calc(100% - 16px);
     margin: 8px 0 3px 0;
 }
 table{
