[Fix] 解决了一些已知问题
- 优化对 focus-wisible 对象的 outline 显示
- 修正部分文本未被本地化的问题
- 修正部分对象无法通过键盘访问的问题

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -149,7 +149,7 @@ input[readonly]{
 .logBox h2{
     font-size: 18px;
     font-weight: bold;
-    padding: 2px 0 10px 0;
+    padding: 6px 0 10px 0;
 }
 .logBox h1 img{
     width: 27px;
@@ -241,6 +241,7 @@ but label input[type="checkbox"]:checked+i{
     max-height: 100%;
     padding-top: 5px;
     overflow-y: auto;
+    overflow: visible;
 }
 #userHead{
     position: relative;
@@ -291,7 +292,7 @@ h2 button{
 }
 .full table td.right input{
     display: block;
-    width: calc(100% - 15px);
+    width: calc(100% - 20px);
 }
 #avatarURL{
     display: block;
