[Upd] 更新背景图片

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -107,7 +107,7 @@ input[readonly]{
 	right: 0;
 	bottom: 0;
 	left: 0;
-    background-image: url(https://img.cncn3.cn/timg);
+    background-image: url(https://websiteres.nmteam.xyz/background/street/time.php);
 	background-position: center;
     background-size: 100%;
 	background-size: cover;
